update in the mobile view 0.2

--- a/css/main.css
+++ b/css/main.css
@@ -271,8 +271,9 @@ margin: 30px;
     
 }
 .portfolio .portfolio-content img{
-    width: 350px;
-    height: 300px;
+/* adapt img to grid*/
+    width: 300px;
+    height: 280px;
 }
 .portfolio .portfolio-content .cards{
     text-align: center;
